--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <div class="main-canvas container   ">
   <div class="main-header  ">
-    <mat-toolbar color="primary  " class=" ">
+    <mat-toolbar color="primary  " class="h20pc ">
       <div class="col-1 ">
         <img src="../../../assets/Media/Logo.OrbitaliQ.png" alt="logo" class="logo-small ">
       </div>
