--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,3 @@
-/* .container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-} */
-
-
+.h20pc {
+    height: 30%;
+}
