--- a/src/app/components/trans-list/trans-list.component.css
+++ b/src/app/components/trans-list/trans-list.component.css
@@ -2,9 +2,17 @@
 
 .trasaction-card {
     width: 100%;
+    max-height: 50%;
     margin: 10px;
     padding: 10px;
     box-shadow: 1px 0px 2px 0px #443e0c48;
     border-radius: 10px;
     background-color: #FFEAAF;
+}
+
+.prom {
+    font-size: 18px;
+    font-weight: 500;
+    font-style: italic;
+    color: #000000;
 }
