--- a/src/app/components/trans-list/trans-list.component.css
+++ b/src/app/components/trans-list/trans-list.component.css
@@ -16,3 +16,28 @@
     font-style: italic;
     color: #000000;
 }
+
+.col-l {
+    max-width: 30%;
+    min-width: 30px;
+    width: 30%;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: content;
+}
+.col-m {
+    max-width: 30%;
+    min-width: 30px;
+    width: 30%;
+        flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: content;
+}
+.col-r {
+    max-width: 30%;
+    min-width: 30px;
+    width: 30%;
+        flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: content;
+}
